--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -107,9 +107,7 @@ body {
     <form id="post-form" method="POST" action="checkview">
         {% csrf_token %}
         <label>Room Name</label>
-        <input type="text" name="room_name" id="room_name" width="100px" />
-        <label>Username</label>
-        <input type="text" name="username" id="username" width="100px" />
+        <input type="text" name="group_topic" id="group_topic" width="100px" />
         <input type="submit" value="Enter Room">
     </form>
 </div>
