--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -104,10 +104,10 @@ body {
     }
     </style>
 
-    <form id="post-form" method="POST" action="checkview">
+    <form id="post-form" method="POST" action="">
         {% csrf_token %}
         <label>Room Name</label>
-        <input type="text" name="group_topic" id="group_topic" width="100px" />
+        <input type="text" name="chatroom" id="chatroom" width="100px" />
         <input type="submit" value="Enter Room">
     </form>
 </div>
