--- a/main_app/templates/main_app/message_form.html
+++ b/main_app/templates/main_app/message_form.html
@@ -68,27 +68,27 @@ body {
 </div>
 
 <script>
-$(document).ready(function(){
+// $(document).ready(function(){
 
-setInterval(function(){
-    $.ajax({
-        type: 'GET',
-        url : "/getMessages/{{chatroom}}/",
-        success: function(response){
-            console.log(response);
-            $("#display").empty();
-            for (var key in response.messages)
-            {
-                var temp="<div class='container darker'><b>"+response.messages[key].user+"</b><p>"+response.messages[key].value+"</p><span class='time-left'>"+response.messages[key].date+"</span></div>";
-                $("#display").append(temp);
-            }
-        },
-        error: function(response, error){
-            alert(error, 'An error occured')
-        }
-    });
-},1000);
-})
+// setInterval(function(){
+//     $.ajax({
+//         type: 'GET',
+//         url : "/getMessages/{{chatroom}}/",
+//         success: function(response){
+//             console.log(response);
+//             $("#display").empty();
+//             for (var key in response.messages)
+//             {
+//                 var temp="<div class='container darker'><b>"+response.messages[key].user+"</b><p>"+response.messages[key].value+"</p><span class='time-left'>"+response.messages[key].date+"</span></div>";
+//                 $("#display").append(temp);
+//             }
+//         },
+//         error: function(response, error){
+//             alert(error, 'An error occured')
+//         }
+//     });
+// },1000);
+// })
 </script>
 
 
@@ -126,25 +126,26 @@ setInterval(function(){
     }
     </style>
 
-    <form id="post-form" >
+    <form id="post-form" method='post'>
         {% csrf_token %}
-        <input type="hidden" name="username" id="username" value="{{username}}"/>
-        <input type="hidden" name="group" id="group_id" value="{{group.id}}"/>
+        <input type="hidden" name="user_id" id="user_id" value="{{user.id}}"/>
+        <input type="hidden" name="chatroom_id" id="chatroom_id" value="{{chatroom.id}}"/>
         <input type="text" name="text" id="text" width="100px" />
+        <!-- {{form.as_p}} -->
+        <input type="hidden" name="chatroom_name" id="chatroom_name" value="{{chatroom.name}}"/>
         <input type="submit" value="Send">
     </form>
 </div>
 
-
 </body>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $(document).on('submit','#post-form',function(e){
     e.preventDefault();
 
     $.ajax({
       type:'POST',
-      url:'/send',
+      url:'create_message/',
       data:{
           // username:$('#username').val(),
           group_id:$('#group_id').val(),
@@ -157,6 +158,6 @@ setInterval(function(){
     });
     document.getElementById('message').value = ''
   });
-</script>
+</script> -->
 
 </html>
