--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html>
 <head>
-    <title>Page Layout</title>
-</head>
-  
-<body>
-    <h1>Face 2 Face</h1>
-</body>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link rel='stylesheet' href='../static/homepage.css'>
 </head>
 <body>
 
-<div align="center">
+<div class='home-title' align="center">
+  <h2>Face2Face</h2>
   <h1> Home Page!</h1>
 </div>
-
+<div class='home-links'>
+  <a href='/chatroom/create' class='btn btn-primary'> Create Chatroom </a>
+</div>
 
 </body>
 
