create about.html, create views:about and url: about

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -11,7 +11,21 @@
   <h1> Home Page!</h1>
 </div>
 <div class='home-links'>
-  <a href='/chatroom/create' class='btn btn-primary'> Create Chatroom </a>
+  <div class='home-btn-div'>
+    <a href='/chatroom/create' class='btn1'> Profile </a>
+  </div>
+  <div class='home-btn-div'>
+    <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
+  </div>
+  <div class='home-btn-div'>
+    <a href='/room' class='btn1'> Video Chat </a>
+  </div>
+  <div class='home-btn-div'>
+    <a href='/about' class='btn1'> About </a>
+  </div>
+  <div class='home-btn-div'>
+    <a href='/chatroom/create' class='btn1'> Contact </a>
+  </div>
 </div>
 
 </body>
