--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -12,7 +12,7 @@
 </div>
 <div class='home-links'>
   <div class='home-btn-div'>
-    <a href='/chatroom/create' class='btn1'> Profile </a>
+    <a href='/' class='btn1'> Profile </a>
   </div>
   <div class='home-btn-div'>
     <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
@@ -24,7 +24,7 @@
     <a href='/about' class='btn1'> About </a>
   </div>
   <div class='home-btn-div'>
-    <a href='/chatroom/create' class='btn1'> Contact </a>
+    <a href='/contact' class='btn1'> Contact </a>
   </div>
 </div>
 
