--- a/main_app/templates/createChatroom.html
+++ b/main_app/templates/createChatroom.html
@@ -105,7 +105,8 @@ body {
 
     <form id="post-form" method="POST" action="">
         {% csrf_token %}
-        <label>Desired Chatroom Name:</label>
+        <label>Create a Chatroom or Join an Existing Chatroom</label>
+        {% comment %}Need to display existing chatrooms to choose from {% endcomment %}
         <input type="text" name="chatroom" id="chatroom" width="100px" />
         <input type="submit" value="Create Room Now">
     </form>
