--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link rel='stylesheet' href='../static/homepage.css'>
 </head>
 <body>
 
 <div class='home-title' align="center">
-  <h2>Face2Face</h2>
+  <div class='logo'></div>
   <h1> Home Page!</h1>
 </div>
 <div class='home-links'>
