--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link rel='stylesheet' href='../static/homepage.css'>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<div class='home-title' align="center">
-  <h2>Face2Face</h2>
-  <h1> About Face2Face!</h1>
-  <p>
-    Face2Face is a place for people to connect and communicate in realtime via video or instant messaging
-  </p>
-</div>
+{% block content %}
+<h1> About page </h1>
 
-</body>
-
-
-</html>
+{% endblock %}
