--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,9 +10,35 @@
     <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
+    
     {% block content %}
-
+    
     {% endblock content %}
+    <div class='home-links'>
+        <div class='home-btn-div'>
+            {% if request.user.is_authenticated %}
+                <a href='/user/{{request.user.username}}' class='btn1'> Profile </a>
+                <a href='/logout' class='btn1'>Logout</a>
+            {% else %}
+                <a href='/accounts/login'>Login</a>
+            {% endif %}
+        </div>
+        <div class='home-btn-div'>
+          <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
+        </div>
+        <div class='home-btn-div'>
+          <a href='/room' class='btn1'> Video Chat </a>
+        </div>
+        <div class='home-btn-div'>
+          <a href='/about' class='btn1'> About </a>
+        </div>
+        <div class='home-btn-div'>
+          <a href='/contact' class='btn1'> Contact </a>
+        </div>
+        <div class='home-btn-div'>
+            <a href='/' class='btn1'> Home </a>
+          </div>
+      </div>
 </body>
 <!-- <script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.8.0.js' %}"></script> -->
 
