--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link rel='stylesheet' href='../static/homepage.css'>
-</head>
-<body>
+{% extends 'base.html' %}
 
+{% block content %}
 <div class='home-title' align="center">
   <h2>Face2Face</h2>
   <h1> Contact Face2Face Team!</h1>
   <p> get in contact with us today!</p>
 </div>
 
-</body>
-
-
-</html>
+{% endblock %}
