Add Logo, Move Nav Links, Move CSS Files into Style Folder, Link CSS to Base.html

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1> About page </h1>
-
+<div class='home-title' align="center">
+    <div class='logo'></div>
+    <h2>About Face2Face</h2>
+    <p> Face2Face Zoom allows users to create and join virtual meeting
+        rooms where they can communicate with each other using video, audio and instant messaging. 
+        Additional future improvements include features that can give participants 
+        the ability to share their screen, share files, and use 
+        text chat within the meeting group or 
+        privately with others in the meeting.</p>
+  </div>
 {% endblock %}
