--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class='home-title' align="center">
+  <div class='logo'></div>
   <h2>Face2Face</h2>
   <h1> Contact Face2Face Team!</h1>
   <p> get in contact with us today!</p>
