--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class='home-title' align="center">
   <div class='logo'></div>
-    <h1> Home Page!</h1>
+    <h1> Welcome!</h1>
   </div>
 
 {% endblock %}
