--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -2,14 +2,20 @@
 {% load static %}
 
 {% block content %}
+<div class='profile__chatrooms' align='center'>
+    <h1>{{ username }}'s chatrooms:</h1>
 
-<h1>{{ username }}'s chatrooms:</h1>
+    {% for chatroom in chatrooms %}
+    <a href="/getMessages/{{ chatroom.name }}">
+        <h3>{{ chatroom.name }}</h3>
+    </a>
+    {% endfor %}
 
-{% for chatroom in chatrooms %}
-<a href="/getMessages/{{ chatroom.name }}">
-  <h3>{{ chatroom.name }}</h3>
-</a>
-
-{% endfor %}
+    {% for membership in memberships %}
+    <a href="/getMessages/{{ membership.name }}">
+        <h3>{{ membership.name }}</h3>
+    </a>
+    {% endfor %}
+</div>
 
 {% endblock %}
