styling based on screen size

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -6,9 +6,11 @@
   <h1>{{ username }}'s chatrooms:</h1>
   
   {% for chatroom in chatrooms %}
-  <a href="/getMessages/{{ chatroom.name }}">
-    <h3>{{ chatroom.name }}</h3>
-  </a>
+  <div class='each__chatroom'>
+    <a class='chatroom__btn' href="/getMessages/{{ chatroom.name }}">
+      <h3>{{ chatroom.name }}</h3>
+    </a>
+  </div>
 </div>
 
 {% endfor %}
