--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class='home-title' align="center">
-    <div class='logo'></div>
+<div class='logo'></div>
+<div class='about__title' align="center">
     <h2>About Face2Face</h2>
-    <p> Face2Face Zoom allows users to create and join virtual meeting
-        rooms where they can communicate with each other using video, audio and instant messaging. 
-        Additional future improvements include features that can give participants 
-        the ability to share their screen, share files, and use 
-        text chat within the meeting group or 
-        privately with others in the meeting.</p>
-  </div>
+</div>
+<div class='about__content'>
+  <p> Face2Face Zoom allows users to create and join virtual meeting
+      rooms where they can communicate with each other using video, audio and instant messaging. 
+      Additional future improvements include features that can give participants 
+      the ability to share their screen, share files, and use 
+      text chat within the meeting group or 
+      privately with others in the meeting.</p>
+</div>
 {% endblock %}
