--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,34 +27,34 @@
     </ol>
   </nav> 
      {% endcomment %}
-     <div class='home-links'>
-        <div class='home-btn-div'>
+     <div class='home__links'>
+        <div class='home__button__container'>
           <a href='/' class='btn1'> Home </a>
         </div>
-         <div class='home-btn-div'>
+         <div class='home__button__container'>
            <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
          </div>
-         <div class='home-btn-div'>
+         <div class='home__button__container'>
            <a href='/room' class='btn1'> Video Chat </a>
          </div>
-         <div class='home-btn-div'>
+         <div class='home__button__container'>
            <a href='/about' class='btn1'> About </a>
          </div>
-         <div class='home-btn-div'>
+         <div class='home__button__container'>
            <a href='/contact' class='btn1'> Contact </a>
          </div>
          {% if request.user.is_authenticated %}
-          <div class='home-btn-div'>
+          <div class='home__button__container'>
            <a href='/user/{{request.user.username}}' class='btn1'> Profile </a>
           </div>
-          <div class='home-btn-div'>
+          <div class='home__button__container'>
            <a href='/logout' class='btn1'>Logout</a>
           </div>
         {% else %}
-         <div class='home-btn-div'>
+         <div class='home__button__container'>
            <a href='/accounts/login'>Login</a>
          </div>
-         <div class='home-btn-div'>
+         <div class='home__button__container'>
            <a href='/signup' class='btn1'> Signup </a>
          </div>
        {% endif %}
