--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -2,18 +2,19 @@ body {
     background-image: url(../../static/imgs/Bground.png);
 }
 
-.home-title {
+.home__title {
     display: inline;
     color: rgb(0, 0, 0);
     font-size: 30px;
 }
 
-.home-title :hover{
+.home__title :hover{
     color: orange;
 }
 
 
-.home-links {
+
+.home__links {
     display: flex;
     background-color: rgba(25, 0, 255, 0.231);
     justify-content: center;
@@ -38,7 +39,7 @@ a:hover {
 }
 
 
-.home-btn-div {
+.home__button__container {
     padding: 5px;
 }
 
@@ -55,3 +56,92 @@ a:hover {
     height: 300px;
 } 
 
+
+/* ================== Media Query Medium ====================== */
+@media screen and (max-width: 1024px) {
+    a {
+        margin: 0 auto;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    
+    .about__content {
+        text-align: center;
+        width: fit-content;
+        padding: 20px;
+        margin-left: 40px;
+        margin-right: 40px;
+        
+    }
+    
+    .about__title {
+        text-align: center;
+    }
+    
+    p {
+        font-size: large;
+        font-weight: 300;
+        font-style: italic;
+    }
+    
+    .home__links {
+        background-color: transparent;
+    }
+    
+    
+    .home__button__container {
+        padding-left: 20px;
+        background-color: rgba(90, 90, 107, 0);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        
+    }
+    
+    .logo {
+        margin-left: 19%;
+    } 
+}
+
+
+/* ================== Media Query small ====================== */
+@media screen and (max-width: 600px) {
+    /* a {
+        margin: 0 auto;
+        padding-left: 0;
+        padding-right: 0;
+    } */
+
+    .about__content {
+        text-align: center;
+        padding-left: 25%;
+        width: min-content;
+    
+    }
+
+    .about__title {
+        margin-left: 25%;
+    }
+    
+    p {
+        font-size: large;
+        font-weight: 300;
+        font-style: italic;
+    }
+
+    .home__links {
+        background-color: transparent;
+    }
+
+
+    .home__button__container {
+         padding-left: 20px;
+         background-color: rgba(90, 90, 107, 0);
+         position: relative;
+         display: flex;
+         justify-content: center;
+
+    }
+
+
+}
