Aidens code for message form

--- a/main_app/templates/group/room.html
+++ b/main_app/templates/group/room.html
@@ -13,6 +13,6 @@
 
     </section>
 </main>
-<script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.15.1.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/streams.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.15.1-1.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/streams-1.js' %}"></script>
 {% endblock content %}
