--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 body {
     background-image: url(../../static/imgs/Bground.png);
+    font-family: 'Poppins', sans-serif;
 }
 
 .home__title {
+    font-family: 'Poppins', sans-serif;
     display: inline;
     color: rgb(0, 0, 0);
     font-size: 30px;
@@ -20,13 +24,20 @@ body {
 } 
 
 .home__links {
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     background-color: rgba(25, 0, 255, 0.231);
-    justify-content: center;
-    align-items: center;
     width: fit-content;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.about__content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+    text-align: center;
 }
 
 .btn1 {
@@ -40,6 +51,10 @@ body {
     background-color: rgb(38, 30, 254);
     color: white;
     border: 2px solid rgb(0, 0, 0);
+}
+
+.profile {
+    text-align: center;
 }
 
 .profile__rooms {
