--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -35,7 +35,7 @@ body{
     flex-grow: 1;
     max-height: 100%;
     min-height: 350px;
-    border: 1px solid salmon;
+    border: 1px solid red;
     border-radius: 5px;
     margin: 2px;
     background-color: lightgray;
@@ -44,4 +44,11 @@ body{
 .video-player{
     height: 100%;
     width: 100%;
+}
+
+.control-icon{
+    height: 100px;
+    width: 100px;
+    border-color: blueviolet;
+    border-radius: 10px;
 }
