--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -7,5 +7,14 @@
   <h1> Contact Face2Face Team!</h1>
   <p> get in contact with us today!</p>
 </div>
+<form ref={form} onSubmit={sendEmail} className='contact__form'>
+  <label>Name</label>
+  <input type="text" name="name" placeholder='Your Fullname' />
+  <label>Email</label>
+  <input type="email" name="email" placeholder='Your Email/Emails'/>
+  <label>Message</label>
+  <textarea name="message" placeholder='Your Message here..'/>
+  <input type="submit" value="Send" />
+</form>
 
 {% endblock %}
