--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -3,16 +3,16 @@
 
 {% block content %}
 <div class='profile'>
-  <h1>Welcome</h1>
+  <h1>{{ username }}'s Profile</h1>
 
 </div>
 <div class='profile__rooms' align='center'>
-  <h1>{{ username }}'s chatrooms:</h1>
+  <h1>Chatrooms:</h1>
 </div>
   {% for chatroom in chatrooms %}
   <div class='chatroom__container'>
     <div class='each__chatroom'>
-      <a class='chatroom__btn' href="/getMessages/{{ chatroom.name }}">
+      <a class='chatroom__btn' href="../message/{{ chatroom.name }}/create">
         <h3>{{ chatroom.name }}</h3>
       </a>
     </div>
@@ -20,7 +20,7 @@
 
 {% endfor %}
 {% for membership in memberships %}
-<a href="/getMessages/{{ membership.name }}">
+<a href="../message/{{ membership.name }}/create">
     <h3>{{ membership.name }}</h3>
 </a>
 {% endfor %}
