Video/Mic Toggle Functionality + Leaving Stream functionality

--- a/main_app/templates/group/room.html
+++ b/main_app/templates/group/room.html
@@ -18,7 +18,7 @@
             <img id="camera-btn" class="control-icon" src="{% static 'imgs/video-camera.png' %}" alt="">
         </div>
         <div class="icon-wrapper">
-            <img id="leave-btn" class="control-icon" src="{% static 'imgs/leave.png' %}" alt="">
+            <img id="leave-btn" class="control-icon" src="{% static 'imgs/exit.png' %}" alt="">
         </div>
     </section>
 
