--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -35,7 +35,7 @@
            <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
          </div>
          <div class='home__button__container'>
-           <a href='/room' class='btn1'> Video Chat </a>
+           <a href='/lobby' class='btn1'> Video Chat </a>
          </div>
          <div class='home__button__container'>
            <a href='/about' class='btn1'> About </a>
