--- a/main_app/templates/group/main.html
+++ b/main_app/templates/group/main.html
@@ -10,6 +10,26 @@
 </head>
 <body>
     <h1>Main Template</h1>
+    <div class='home__links'>
+        <div class='home__button__container'>
+          <a href='/' class='btn1'> Home </a>
+        </div>
+         <div class='home__button__container'>
+           <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
+         </div>
+         <div class='home__button__container'>
+           <a href='/about' class='btn1'> About </a>
+         </div>
+         <div class='home__button__container'>
+           <a href='/contact' class='btn1'> Contact </a>
+         </div>
+          <div class='home__button__container'>
+           <a href='/user/{{request.user.username}}' class='btn1'> Profile </a>
+          </div>
+          <div class='home__button__container'>
+           <a href='/logout' class='btn1'>Logout</a>
+          </div>
+       </div>
     {% block content %}
 
     {% endblock content %}
