--- a/main_app/templates/group/main.html
+++ b/main_app/templates/group/main.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Face2Face</title>
-    <link rel="stylesheet" type='text/css' media='screen' href="{% static 'styles/main.css' %}">
+    <link rel="stylesheet" type='text/css' media='screen' href="{% static './styles/main.css' %}">
+    {% comment %} <link rel='stylesheet' type='text/css' media='screen' href="{% static '/styles/homepage.css' %}"> {% endcomment %}
 </head>
 <body>
-    <h1>Main Template</h1>
     <div class='home__links'>
         <div class='home__button__container'>
           <a href='/' class='btn1'> Home </a>
