--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -153,7 +153,9 @@ body {
         margin-left: 19%;
     } 
 }
+ /* ======================= video chat section ============================ */
 
+ 
 
 /* ================== Media Query small ====================== */
 @media screen and (max-width: 600px) {
