--- a/main_app/templates/edit_chatroom.html
+++ b/main_app/templates/edit_chatroom.html
@@ -2,18 +2,24 @@
 
 {% block content %}
 
-<div class="main">
+<!-- <div class="main"> -->
     <!-- Create a Form -->
-    <form method="POST">
-        <!-- Security token by Django -->
-        {% csrf_token %}
- 
+    <!-- <form method="POST"> -->
+        <!-- {% csrf_token %} -->
         <!-- form as paragraph -->
-        {{ form.as_p }}
- 
+        <!-- {{ form.as_p }}
         <input type="submit" value="Update">
     </form>
  
-</div>
+</div> -->
+
+<div class='chat-create chat-enter'> 
+    <form id="post-form" method="POST">
+        {% csrf_token %}
+        <label>Edit Chatroom Name</label>
+        <input type="text" name="name" id="name" width="100px" />
+        <input type="submit" value="Update">
+    </form>
+  </div>
 
 {% endblock %}
