update nav, add animation

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -6,7 +6,7 @@
     <h2>About Face2Face</h2>
 </div>
 <div class='about__content'>
-  <p> Face2Face Zoom allows users to create and join virtual meeting
+  <p> Face2Face allows users to create and join virtual meeting
       rooms where they can communicate with each other using video, audio and instant messaging. 
       Additional future improvements include features that can give participants 
       the ability to share their screen, share files, and use 
