--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,6 +1,7 @@
 
 body{
     background-image: url(../../static/imgs/Bground.png);
+    font-family: 'Poppins', sans-serif;
 }
 
 #logo{
@@ -69,6 +70,7 @@ body{
 }
 
 .home__links {
+    font-size: large;
     margin-left: auto;
     margin-right: auto;
     display: flex;
