--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -194,11 +194,14 @@ body {
     
     .home__links {
         background-color: transparent;
+        padding: 0;
+        font-size: 10px;
+
     }
     
     
     .home__button__container {
-        padding-left: 20px;
+        padding-left: 0;
         background-color: rgba(90, 90, 107, 0);
         position: relative;
         display: flex;
