--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -7,7 +7,7 @@
 
 </div>
 <div class='profile__rooms' align='center'>
-  <h1>Chatrooms:</h1>
+  <h1>Your Chatrooms:</h1>
   {% for chatroom in chatrooms %}
   <div class='chatroom__container'>
     <div class='each__chatroom'>
@@ -19,10 +19,15 @@
 </div>
 
 {% endfor %}
+<div class='profile__rooms' align='center'>
+  <h1>Joined Chatrooms</h1>
 {% for membership in memberships %}
-<a href="../message/{{ membership.name }}/create">
-    <h3>{{ membership.name }}</h3>
-</a>
+<div class='chatroom__container'>
+  <a href="../message/{{ membership.name }}/create">
+      <h3>{{ membership.name }}</h3>
+  </a>
+</div>
+</div>
 {% endfor %}
 
 {% endblock %}
