--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -21,6 +21,7 @@ body{
     transform: translate(-50%, -50%)
 }
 
+
 /* Room Styling */
 
 #video-streams{
@@ -95,4 +96,53 @@ body{
 
 .home__button__container {
     padding: 5px;
+}
+
+/* ================== Media Query Medium ====================== */
+@media screen and (max-width: 1024px) {
+    a {
+        margin: 0 auto;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    
+    .about__content {
+        text-align: center;
+        width: fit-content;
+        padding: 20px;
+        margin-left: 40px;
+        margin-right: 40px;
+        
+    }
+    
+    .about__title {
+        text-align: center;
+    }
+    
+    p {
+        font-size: large;
+        font-weight: 300;
+        font-style: italic;
+    }
+    
+    .home__links {
+        background-color: transparent;
+        padding: 0;
+        font-size: 10px;
+
+    }
+    
+    
+    .home__button__container {
+        padding-left: 0;
+        background-color: rgba(90, 90, 107, 0);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        
+    }
+    
+    .logo {
+        margin-left: 19%;
+    } 
 }
