adjust profile.html chatroom lists and adjust styling

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,6 +25,7 @@
   </nav> 
      {% endcomment %}
      <div class='home__links'>
+      <div class='bw-logo'></div>
         <div class='home__button__container'>
           <a href='/' class='btn1'> Home </a>
         </div>
