--- a/main_app/templates/createChatroom.html
+++ b/main_app/templates/createChatroom.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class='logo'></div>
 <div class='chat-create chat-enter'> 
   <form id="post-form" method="POST" action="">
       {% csrf_token %}
