--- a/main_app/templates/group/room.html
+++ b/main_app/templates/group/room.html
@@ -1,8 +1,8 @@
 {% extends 'group/main.html' %}
 {% load static %}
 {% block content %}
-
 <main>
+    <div class='logo'></div>
     <section id="room-name-wrapper">
         <p>Room Name: <span id="room-name"></span></p>
     </section>
