--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -4,26 +4,24 @@
 {% block content %}
 <div class='profile'>
   <h1>{{ username }}'s Profile</h1>
-
 </div>
+<div class='profile-img'></div>
 <div class='profile__rooms' align='center'>
-  <h1>Your Chatrooms:</h1>
+  <h3>Created Chatrooms:</h3>
   {% for chatroom in chatrooms %}
   <div class='chatroom__container'>
-    <div class='each__chatroom'>
       <a class='chatroom__btn' href="../message/{{ chatroom.name }}/create">
         <h3>{{ chatroom.name }}</h3>
       </a>
-    </div>
   </div>
 </div>
 
 {% endfor %}
 <div class='profile__rooms' align='center'>
-  <h1>Joined Chatrooms</h1>
+  <h3>Joined Chatrooms</h3>
 {% for membership in memberships %}
 <div class='chatroom__container'>
-  <a href="../message/{{ membership.name }}/create">
+  <a class='chatroom__btn' href="../message/{{ membership.name }}/create">
       <h3>{{ membership.name }}</h3>
   </a>
 </div>
