--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -1,70 +1,11 @@
+/* =========================== Main CSS Code =============================== */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 body {
     background-image: url(../../static/imgs/Bground.png);
     font-family: 'Poppins', sans-serif;
 }
-
-/* The animation code */
-@keyframes profile {
-    /* 0%   {background-color: rgb(0, 81, 255, 0.4);
-        color: rgb(250, 250, 250);
-         }
-    25%  {background-color:rgb(255, 149, 0); left:200px; top:0px;}
-    50%  {background-color:rgb(8, 5, 201); left:200px; top:200px;
-        color: rgb(255, 255, 255);}
-    75%  {background-color:orange; left:0px; top:200px;}
-    100% {background-color: rgba(255, 166, 0, 0.624)} */
-    from {background-color: rgb(0, 81, 255, 0.4);}
-    to {background-color:rgb(38, 30, 254);}
-    from {color: black;}
-    to {color: white;}
-}
-
-@keyframes navbar {
-    from {background-color: transparent;}
-    to {background-color: rgba(25, 0, 255, 0.231);}
-}
-
-@keyframes links {
-    from {background-color: transparent;}
-    to {background-color: rgb(38, 30, 254)}
-    from {border: 2px solid transparent;}
-    to { border: 2px solid black;}
-}
-
-.profile {
-    text-align: center;
-    color: rgb(255, 255, 255);
-    background-color: rgb(38, 30, 254);
-    animation-name: profile;
-    animation-duration: 6s;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 15px;
-  }
-
-.home__links {
-    animation-name: navbar;
-    animation-duration: 4s;
-}
-
-.btn1:hover {
-    animation-name: links;
-    animation-duration: 2s;
-}
-
-.home__title :hover {
-    animation-name: profile;
-    animation-duration: 10s;
-
-}
-
-
-/* ================ End of animations ==================== */
 
 .contact__container {
     width: fit-content;
@@ -104,6 +45,7 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 20px;
+    margin-top: 10px;
 }
 
 .about__content {
@@ -127,25 +69,49 @@ body {
     border: 2px solid rgb(0, 0, 0);
 }
 
-
-.profile__rooms {
-    color: rgb(0, 0, 0);
-    height: fit-content;
-    font-size: large;
-    text-align: center;
-}
-
-.each__chatroom {
-    text-align: center;
-}
-
 .chatroom__container {
-    background-color: aqua;
+    background-color: black;
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.chatroom__btn {
+    color: white;
+}
+
+.profile-img {
+    background-image: url(../../static/imgs/profile-img.png);
+    background-position: center;
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    -webkit-box-shadow: 0px 0px 14px 1px rgba(5,43,156,1);
+    -moz-box-shadow: 0px 0px 14px 1px rgba(5,43,156,1);
+    box-shadow: 0px 0px 14px 1px rgba(5,43,156,1);
+    border-radius: 20px;
+} 
+
+.profile__rooms {
+    color: rgb(0, 0, 0);
+    border: 2px solid black;
+    height: fit-content;
+    font-size: large;
+    text-align: center;
+    background-color: rgba(0, 0, 255, 0.425);
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    height: 200px ;
+    padding-left: 20px;
+    padding-right: 20px;
+    
 }
 
 
@@ -159,12 +125,19 @@ body {
 
 
 .logo {
-    background-image: url(../../static/imgs/f2f-transparent.png);
+    background-image: url(../../static/imgs/f2f.png);
     background-position: center;
     background-size:cover;
-    width: 500px;
-    height: 300px;
+    width: 400px;
+    height: 200px;
 } 
+
+.bw-logo{
+    background-image: url(../imgs/f2f-black.png);
+    width: 20px;
+    height: 20px;
+}
+
 
 .chat-create {
     color: white;
@@ -172,14 +145,121 @@ body {
     margin-right: auto;
     background-color: blueviolet;
     width: fit-content;
-    margin-top: 200px;
+    margin-top: 80px;
     padding: 20px;
     border: 2px solid black;
 }
 
+.rooms__container {
+    background-color: rgb(0, 0, 0);
+}
+/* =========================== End of Main CSS Code =============================== */
 
 
-/* ================== Media Query Medium ====================== */
+/* ==================================================== */
+
+
+/* The animation code below */
+
+
+/* ====================================================== */
+@keyframes profile {
+    /* 0%   {background-color: rgb(0, 81, 255, 0.4);
+        color: rgb(250, 250, 250);
+         }
+    25%  {background-color:rgb(255, 149, 0); left:200px; top:0px;}
+    50%  {background-color:rgb(8, 5, 201); left:200px; top:200px;
+        color: rgb(255, 255, 255);}
+    75%  {background-color:orange; left:0px; top:200px;}
+    100% {background-color: rgba(255, 166, 0, 0.624)} */
+    from {background-color: rgb(0, 81, 255, 0.4);}
+    to {background-color:rgb(38, 30, 254);}
+    from {color: black;}
+    to {color: white;}
+}
+
+@keyframes navbar {
+    from {background-color: transparent;}
+    to {background-color: rgba(25, 0, 255, 0.231);}
+}
+
+@keyframes logo {
+    from {background-image: none;}
+    to {background-image: url(../../static/imgs/f2f.png);}
+}
+
+@keyframes links {
+    from {background-color: transparent;}
+    to {background-color: rgb(38, 30, 254)}
+    from {border: 2px solid transparent;}
+    to { border: 2px solid black;}
+}
+
+
+@keyframes welcome {
+    from {color: transparent;}
+    to {background-color: rgb(38, 30, 254)}
+}
+
+/* .logo{
+    animation-name: logo;
+    animation-duration: 5s;
+} */
+
+
+.profile {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    background-color: rgb(38, 30, 254);
+    animation-name: profile;
+    animation-duration: 6s;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 15px;
+  }
+
+.home__title {
+    animation-name: welcome;
+    animation-duration: 6s;
+    color: blue;
+}
+
+.home__links {
+    animation-name: navbar;
+    animation-duration: 4s;
+}
+
+.btn1:hover {
+    animation-name: links;
+    animation-duration: 2s;
+}
+
+.home__title :hover {
+    animation-name: profile;
+    animation-duration: 10s;
+
+}
+/* ================ End of animations ==================== */
+
+
+/* =============================================================== */
+
+
+
+
+/* Small Devices and Tablets Section Below */
+
+
+
+
+/* ======================================================================= */
+
+/* ================== Media Query Medium (tablets) ====================== */
+
+/* ======================================================================= */
 @media screen and (max-width: 1024px) {
     a {
         margin: 0 auto;
@@ -229,7 +309,12 @@ body {
 }
 
 
-/* ================== Media Query small ====================== */
+
+/* ======================================================================= */
+
+/* ================== Media Query small (phones) ====================== */
+
+/* ======================================================================= */
 @media screen and (max-width: 600px) {
     /* a {
         margin: 0 auto;
