--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -53,6 +53,12 @@ body {
     margin-right: auto;
     width: 700px;
     text-align: center;
+    background-color: rgba(169, 169, 169, 0.482);
+    border: 2px solid black;
+    -webkit-box-shadow: 0px 0px 14px 1px rgb(0, 2, 7);
+    -moz-box-shadow: 0px 0px 14px 1px rgb(0, 0, 0);
+    box-shadow: 0px 3px 5px 1px rgb(0, 0, 0);
+    border-radius: 10px;
 }
 
 .btn1 {
@@ -143,15 +149,33 @@ body {
     color: white;
     margin-left: auto;
     margin-right: auto;
-    background-color: blueviolet;
+    background-color: rgba(73, 43, 226, 0.825);
     width: fit-content;
-    margin-top: 80px;
+    margin-top: 50px;
     padding: 20px;
     border: 2px solid black;
+    border-radius: 10px;
 }
+
+/* .chat-create:hover {
+    text-decoration: underline;
+    
+} */
 
 .rooms__container {
     background-color: rgb(0, 0, 0);
+}
+
+.create__chatroom__label:hover {
+    text-decoration: underline;
+}
+
+.submit__chatroom {
+    background-color: rgb(0, 255, 64);
+    height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 5px;
 }
 /* =========================== End of Main CSS Code =============================== */
 
