feat: add edit and delete buttons to chatrooms on profile page (only for those the logged in user created). add views for editing and deleting chatrooms.

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -7,22 +7,37 @@
 
 </div>
 <div class='profile__rooms' align='center'>
-  <h1>Chatrooms:</h1>
+  <h1>Your Chatrooms:</h1>
 </div>
-  {% for chatroom in chatrooms %}
-  <div class='chatroom__container'>
-    <div class='each__chatroom'>
-      <a class='chatroom__btn' href="../message/{{ chatroom.name }}/create">
-        <h3>{{ chatroom.name }}</h3>
-      </a>
-    </div>
-  </div>
 
+{% for chatroom in chatrooms %}
+<div class='chatroom__container'>
+  <div class='each__chatroom'>
+    <a class='chatroom__btn' href="{% url 'create_message' chatroom=chatroom.name %}">
+      <h3>{{ chatroom.name }}</h3>
+    </a>
+    <a class='chatroom__btn' href="{% url 'edit_chatroom' chatroom=chatroom.name %}">
+      <h5>edit name</h5>
+    </a>
+    <a class='chatroom__btn' href="{% url 'delete_chatroom' chatroom=chatroom.name %}">
+      <h5>delete room</h5>
+    </a>
+  </div>
+</div>
 {% endfor %}
+
+<div class='profile__rooms' align='center'>
+  <h1>Chatrooms You Joined:</h1>
+</div>
+
 {% for membership in memberships %}
-<a href="../message/{{ membership.name }}/create">
-    <h3>{{ membership.name }}</h3>
-</a>
+<div class='chatroom__container'>
+  <div class='each__chatroom'>
+    <a href="{% url 'create_message' chatroom=membership.name %}">
+      <h3>{{ membership.name }}</h3>
+    </a>
+  </div>
+</div>
 {% endfor %}
 
 {% endblock %}
