adjust create chatroom form

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,11 +25,11 @@
   </nav> 
      {% endcomment %}
      <div class='home__links'>
-      <div class='bw-logo'></div>
+      {% comment %} <div class='bw-logo'></div> {% endcomment %}
         <div class='home__button__container'>
           <a href='/' class='btn1'> Home </a>
         </div>
-         <div class='home__button__container'>
+        <div class='home__button__container'>
            <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
          </div>
          <div class='home__button__container'>
