--- a/main_app/templates/edit_chatroom.html
+++ b/main_app/templates/edit_chatroom.html
@@ -5,7 +5,7 @@
 <div class='chat-create chat-enter'> 
     <form id="post-form" method="POST">
         {% csrf_token %}
-        <label>Edit Chatroom Name</label>
+        <label>Edit Chatroom</label>
         <input type="text" name="name" id="name" width="100px" />
         <input type="submit" value="Update">
     </form>
