chore: edit button text in edit_chatroom and profile templates

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -17,10 +17,10 @@
       <h3>{{ chatroom.name }}</h3>
     </a>
     <a class='chatroom__btn' href="{% url 'edit_chatroom' chatroom=chatroom.name %}">
-      <h5>edit name</h5>
+      <h5>edit</h5>
     </a>
     <a class='chatroom__btn' href="{% url 'delete_chatroom' chatroom=chatroom.name %}">
-      <h5>delete room</h5>
+      <h5>delete</h5>
     </a>
   </div>
 </div>
