chore: edit createChatroom for loop to display existing chatrooms. edit CreateChatroom view to pass up existing chatrooms

--- a/main_app/templates/createChatroom.html
+++ b/main_app/templates/createChatroom.html
@@ -14,7 +14,7 @@
   <div class='chatroom__container'>
     <div class='each__chatroom'>
       <a class='chatroom__btn' href="../message/{{ chatroom.name }}/create">
-        <h3>{{ all_chatrooms.name }}</h3>
+        <h3>{{ chatroom.name }}</h3>
       </a>
     </div>
   </div>
