--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -85,6 +85,11 @@ body {
     padding-right: 5px;
 }
 
+/* .each__chatroom {
+    background-color: beige;
+    color: blue;
+} */
+
 .chatroom__btn {
     color: white;
 }
