--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -16,7 +16,8 @@ body{
 #logo{
     display: block;
     width: 100px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #form-container{
