--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,7 +6,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Face2Face</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    {% comment %} <link rel='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}"> {% endcomment %}
     <link rel='stylesheet' type='text/css' media='screen' href="{% static '/styles/homepage.css' %}">
+    {% comment %} <link rel='stylesheet' type='text/css' href='../static/styles/main.css'> {% endcomment %}
+    <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
   {% comment %} <nav aria-label="breadcrumb">
@@ -25,15 +28,14 @@
   </nav> 
      {% endcomment %}
      <div class='home__links'>
-      {% comment %} <div class='bw-logo'></div> {% endcomment %}
         <div class='home__button__container'>
           <a href='/' class='btn1'> Home </a>
         </div>
-        <div class='home__button__container'>
+         <div class='home__button__container'>
            <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
          </div>
          <div class='home__button__container'>
-           <a href='/lobby' class='btn1'> Video Chat </a>
+           <a href='/room' class='btn1'> Video Chat </a>
          </div>
          <div class='home__button__container'>
            <a href='/about' class='btn1'> About </a>
