--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,6 @@
     {% comment %} <link rel='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}"> {% endcomment %}
     <link rel='stylesheet' type='text/css' media='screen' href="{% static '/styles/homepage.css' %}">
     {% comment %} <link rel='stylesheet' type='text/css' href='../static/styles/main.css'> {% endcomment %}
-    <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
   {% comment %} <nav aria-label="breadcrumb">
@@ -35,7 +34,7 @@
            <a href='/chatroom/create' class='btn1'> Create Chatroom </a>
          </div>
          <div class='home__button__container'>
-           <a href='/room' class='btn1'> Video Chat </a>
+           <a href='/lobby' class='btn1'> Video Chat </a>
          </div>
          <div class='home__button__container'>
            <a href='/about' class='btn1'> About </a>
