--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -33,6 +33,10 @@ body{
 
 
 /* Room Styling */
+#room-name-wrapper{
+    text-align: center;
+    font-size: 18px;
+}
 
 #video-streams{
     display: flex;
@@ -51,11 +55,34 @@ body{
     border-radius: 5px;
     margin: 2px;
     background-color: lightgray;
+    position: relative;
 }
 
 .video-player{
     height: 100%;
     width: 100%;
+}
+
+.video-player > *{
+    border-radius: 5px;
+}
+
+@media screen and (max-width:1650px) {
+    .video-container{
+        flex-basis: 300px;
+        min-height: 200px;
+    }
+}
+.username-wrapper{
+    position: absolute;
+    top:10px;
+    left:10px;
+    z-index: 1000;
+    background-color: rgb(0, 0, 0, 0.4);
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    color: white;
 }
 
 .control-icon{
@@ -156,4 +183,56 @@ body{
     .logo {
         margin-left: 19%;
     } 
+}
+
+/* Lobby Styling */
+
+#welcome-message{
+    text-align: center;
+    margin: 20px;
+}
+
+#welcome-message h1{
+    text-align: center;
+    margin: 20px;
+    font-size: 36px;
+}
+
+#welcome-message p{
+    text-align: center;
+    margin: 20px;
+    font-size: 20px;
+}
+
+.form-field{
+    margin:20px;
+}
+
+.form-field label{
+    margin:20px;
+    line-height: 1.7em;
+}
+
+.form-field input{
+    width: 100%;
+    border: 2px solid lightgray;
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.form-field input[type='submit']{
+    background-color: purple;
+    border: none;
+    color: white;
+
+}
+
+@media screen and (max-width:450px){
+    #form-container{
+        width: 95%;
+    }
+    #welcome-message h1{
+        font-size: 24px;
+    }
 }
