--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -81,7 +81,7 @@ body {
     border: 2px solid black;
     margin-left: auto;
     margin-right: auto;
-    width: fit-content;
+    width: 200px;
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 10px;
@@ -106,6 +106,7 @@ body {
     background-color: white;
     border-radius: 10px;
     border: 2px solid black;
+    padding: 2px;
 }
 
 .delete { 
@@ -113,7 +114,6 @@ body {
     background-color: white;
     border-radius: 10px;
     padding: 2px;
-    margin: 2px;
     border: 2px solid black;
 }
 
@@ -144,7 +144,7 @@ body {
     height: 500px;
     font-size: large;
     text-align: center;
-    background-color: rgba(115, 115, 115, 0.225);
+    background-color: rgba(46, 46, 46, 0.2);
     margin-left: 30%;
     width: fit-content;
     padding-left: 20px;
@@ -159,7 +159,7 @@ body {
     height: 500px;
     font-size: large;
     text-align: center;
-    background-color: rgba(115, 115, 115, 0.225);
+    background-color: rgba(46, 46, 46, 0.2);
     margin-left: 5px;
     width: fit-content;
     padding-left: 20px;
@@ -242,14 +242,6 @@ body {
 
 /* ====================================================== */
 @keyframes profile {
-    /* 0%   {background-color: rgb(0, 81, 255, 0.4);
-        color: rgb(250, 250, 250);
-         }
-    25%  {background-color:rgb(255, 149, 0); left:200px; top:0px;}
-    50%  {background-color:rgb(8, 5, 201); left:200px; top:200px;
-        color: rgb(255, 255, 255);}
-    75%  {background-color:orange; left:0px; top:200px;}
-    100% {background-color: rgba(255, 166, 0, 0.624)} */
     from {background-color: rgb(0, 81, 255, 0.4);}
     to {background-color:rgb(38, 30, 254);}
     from {color: black;}
