--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -112,11 +112,11 @@ body{
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    background-color: rgba(25, 0, 255, 0.231);
+    background-color: rgb(255, 255, 255);
     width: fit-content;
     padding-left: 10px;
     padding-right: 10px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .btn1 {
@@ -124,12 +124,14 @@ body{
     padding-left: 20px;
     padding-right: 20px;
     margin-left: 20px;
+    border-radius: 10px;
 }
 
 .btn1:hover {
-    background-color: rgb(38, 30, 254);
+    background-color: rgb(255, 255, 255);
     color: white;
     border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
 }
 
 .home__button__container {
@@ -236,3 +238,54 @@ body{
         font-size: 24px;
     }
 }
+
+
+/* ============= Nav bar animation ===================== */
+
+@keyframes profile {
+    from {background-color: rgb(0, 81, 255, 0.4);}
+    to {background-color:rgb(38, 30, 254);}
+    from {color: black;}
+    to {color: white;}
+}
+
+@keyframes navbar {
+    from {background-color: transparent;}
+    to {background-color: rgba(25, 0, 255, 0.231);}
+}
+
+@keyframes logo {
+    from {background-image: none;}
+    to {background-image: url(../../static/imgs/f2f.png);}
+}
+
+@keyframes links {
+    from {background-color: transparent;}
+    to {background-color: rgb(38, 30, 254)}
+    from {border: 2px solid transparent;}
+    to { border: 2px solid black;}
+}
+
+
+@keyframes welcome {
+    from {color: transparent;}
+    to {background-color: rgb(38, 30, 254)}
+}
+
+
+.home__title {
+    animation-name: welcome;
+    animation-duration: 6s;
+    color: blue;
+}
+
+.home__links {
+    animation-name: navbar;
+    animation-duration: 4s;
+}
+
+.btn1:hover {
+    animation-name: links;
+    animation-duration: 2s;
+}
+
