login form styled

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -51,7 +51,7 @@
           </div>
         {% else %}
          <div class='home__button__container'>
-           <a href='/accounts/login'>Login</a>
+           <a href='/accounts/login' class='btn1'>Login</a>
          </div>
          <div class='home__button__container'>
            <a href='/signup' class='btn1'> Signup </a>
