--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -74,7 +74,7 @@ body {
     margin-right: auto;
     background-color: rgba(169, 169, 169, 0.606);
     padding: 20px;
-    border: 2px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.459);
     border-radius: 10px;
 }
 
@@ -192,6 +192,39 @@ body {
     background-image: url(../imgs/f2f-black.png);
     width: 20px;
     height: 20px;
+}
+
+.login__container {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0, 0, 255, 0.229);
+    width: fit-content;
+    padding: 20px;
+    border-radius: 20px;
+    border: 2px solid rgba(0, 0, 0, 0.372);
+}
+
+.login-btn {
+    background-color: rgb(0, 255, 149);
+    margin-left: 80px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 15px;
+    font-size: 15px;
+    font-style: italic;
+    border: 2px solid black;
+}
+
+.login-btn:hover {
+    background-color: rgba(255, 255, 255, 0.611);
+    color: rgb(1, 12, 1);
+    font-style: italic;
+    font-size: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 2px solid rgb(118, 32, 255);
 }
 
 .profile-img {
