profile room containers

--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -17,7 +17,7 @@
    <textarea name="text" id="contact" cols="20" rows="4" class=" effect-1 m-1" placeholder="Your Message Here..."></textarea>
    <span class="Focus-border"></span>
  </div>
-    <button type="submit" class="contact__btn">Send inquiry</button>  
+    <button type="submit" class="contact__btn">Send Message</button>  
  </form>
 
 </div>
