--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -111,6 +111,7 @@ body {
     padding: 5px;
     padding-left: 5px;
     padding-right: 5px;
+    margin-top: 5px;
 }
 
 .contact__btn:hover {
@@ -260,6 +261,7 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     overflow-y: scroll;
+    border-radius: 10px;
     
 }
 .profile__room2 {
@@ -276,6 +278,7 @@ body {
     padding-right: 20px;
     overflow-y: scroll;
     scrollbar-color: black;
+    border-radius: 10px;
     
 }
 
