--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -36,8 +36,8 @@ body {
 }
 
 .chatroom__container {
-    background-color: rgba(64, 255, 0, 0.29);
-    border: 2px solid black;
+    /* background-color: rgba(0, 255, 221, 0.29); */
+    border: 2px solid rgb(255, 255, 255);
     margin-left: auto;
     margin-right: auto;
     width: 200px;
@@ -45,8 +45,17 @@ body {
     padding-right: 10px;
     border-radius: 10px;
     padding-bottom: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(142,134,255,1) 100%);
 }
+
+.chatroom__container:hover {
+    -webkit-box-shadow: 10px 10px 5px -2px rgba(64,172,255,0.56);
+    -moz-box-shadow: 10px 10px 5px -2px rgba(64,172,255,0.56);
+    box-shadow: 10px 10px 5px -2px rgba(64,172,255,0.56);
+}
+
 
 .create__chatroom__label:hover {
     text-decoration: underline;
@@ -121,19 +130,34 @@ body {
 }
 
 .delete { 
-    color: red;
+    background: rgb(255,0,0);
+    background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,255,255,1) 25%, rgba(249,249,249,1) 75%, rgba(255,0,0,1) 100%);
     background-color: white;
     border-radius: 10px;
     padding: 2px;
     border: 2px solid black;
+    color: rgb(0, 0, 0);
+}
+
+.delete:hover {
+    -webkit-box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
+-moz-box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
+box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
 }
 
 .edit {
     color: rgb(0, 0, 0);
-    background-color: white;
+    background: rgb(241,255,0);
+    background: linear-gradient(90deg, rgba(241,255,0,1) 0%, rgba(255,255,255,1) 25%, rgba(249,249,249,1) 75%, rgba(241,255,0,1) 100%);
     border-radius: 10px;
     border: 2px solid black;
     padding: 2px;
+}
+
+.edit:hover {
+    -webkit-box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
+-moz-box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
+box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
 }
 
 .home__title {
@@ -165,14 +189,22 @@ body {
 }
 
 .join__chatroom__btn {
-    background-color: white;
+    background: rgb(0,255,25);
+    background: linear-gradient(90deg, rgba(0,255,25,1) 0%, rgba(255,255,255,1) 25%, rgba(249,249,249,1) 75%, rgba(0,255,25,1) 100%);
     border: 2px solid black;
     border-radius: 10px;
+    color: rgb(0, 0, 0);
 }
 
-.joined__chatroom__title {
-    font-size: 30px;
+.join__chatroom__btn:hover {
+    -webkit-box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
+-moz-box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
+box-shadow: 5px 5px 5px -2px rgba(0,0,0,1);
 }
+
+/* .joined__chatroom__title {
+    font-size: 30px;
+} */
 
 .logo {
   display: flex;
@@ -250,12 +282,13 @@ body {
 
 .profile__room1 {
     display: inline-block;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border: 2px solid black;
     height: 500px;
     font-size: large;
     text-align: center;
-    background-color: rgba(46, 46, 46, 0.2);
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(87,87,87,1) 50%, rgba(0,0,0,0.7203475140056023) 100%);
     margin-left: 30%;
     width: fit-content;
     padding-left: 20px;
@@ -271,7 +304,7 @@ body {
     height: 500px;
     font-size: large;
     text-align: center;
-    background-color: rgba(46, 46, 46, 0.2);
+    background-color: rgba(46, 46, 46, 0.4);
     margin-left: 5px;
     width: fit-content;
     padding-left: 20px;
