Aiden's styling for chatrooms and stuff

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,6 +7,8 @@
     <title>Face2Face</title>
     <link rel="icon" href="../../static/imgs/icon.png">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    {% block additionalStyles %}
+    {% endblock %}
     {% comment %} <link rel='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}"> {% endcomment %}
     <link rel='stylesheet' type='text/css' media='screen' href="{% static '/styles/homepage.css' %}">
     {% comment %} <link rel='stylesheet' type='text/css' href='../static/styles/main.css'> {% endcomment %}
