--- a/static/styles/homepage.css
+++ b/static/styles/homepage.css
@@ -48,6 +48,7 @@ body {
     margin-bottom: 20px;
     background: rgb(255,255,255);
     background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(142,134,255,1) 100%);
+    overflow: overlay;
 }
 
 .chatroom__container:hover {
@@ -61,7 +62,7 @@ body {
     text-decoration: underline;
 }
 
-.chat-create {
+/* .chat-create {
     color: white;
     margin-left: auto;
     margin-right: auto;
@@ -71,7 +72,7 @@ body {
     padding: 20px;
     border: 2px solid black;
     border-radius: 10px;
-}
+} */
 
 .chatroom__btn {
     color: rgb(13, 0, 255);
